--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
         "cordova-browser": "^5.0.3",
         "cordova-plugin-splashscreen": "^5.0.2",
         "cordova-plugin-whitelist": "^1.3.3",
-        "gulp": "^3.9.1",
         "gulp-if": "^2.0.2",
         "gulp-uglify": "^3.0.1",
         "gulp-ui5-preload": "^1.3.1"
@@ -30,6 +29,8 @@
         ]
     },
     "devDependencies": {
-        "grunt-openui5": "^0.14.0"
+        "bower": "^1.8.4",
+        "grunt-openui5": "^0.14.0",
+        "gulp": "^3.9.1"
     }
 }
