--- a/www/manifest.json
+++ b/www/manifest.json
@@ -45,6 +45,38 @@
           "uri": "css/style.css"
         }
       ]
+    },
+    "routing": {
+      "config": {
+        "routerClass": "sap.m.routing.Router",
+        "viewType": "XML",
+        "viewPath": "pae.logistica.view",
+        "controlId": "app",
+        "controlAggregation": "pages",
+        "async": true
+      },
+      "routes": [
+        {
+          "pattern": "",
+          "name": "login",
+          "target": "Login"
+        },
+        {
+          "pattern": "home",
+          "name": "Home",
+          "target": "Home"
+        }
+      ],
+      "targets": {
+        "Login": {
+          "viewID": "App",
+          "viewName": "App"
+        },
+        "Home": {
+          "viewId": "Home",
+          "viewName": "Home"
+        }
+      }
     }
   }
 }
