--- a/www/manifest.json
+++ b/www/manifest.json
@@ -57,7 +57,7 @@
       },
       "routes": [
         {
-          "pattern": "",
+          "pattern": "login",
           "name": "login",
           "target": "Login"
         },
